<resources>
    <string name="app_name">MusicApplication-SP</string>
    <string name="log_in_to_music_app">Log into Music App</string>
    <string name="e_mail_address">Email</string>
    <string name="Log_in">Log in</string>
    <string name="time_count">Seconds remaining: %d</string>
    <string name="facebook_app_id">2330761630394308</string>
    <string name="fb_login_protocol_scheme">fb2330761630394308</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google">Google</string>
    <string name="twitter">twitter</string>
    <string name="spotify">Link Spotify account</string>
    <string name="or_continue_to_log_in_with">Or continue to log in with</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>

    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="firstname">first name</string>
    <string name="repeat_password">repeat password</string>
    <string name="lName">last name</string>
    <string name="sign_up">sign up</string>
    <string name="playlist">Playlist:</string>
    <string name="no_playlists">No playlists</string>
    <string name="no_playlist">No Playlist</string>
    <string name="no_song">No Song</string>
    <string name="songs">Songs:</string>
    <string name="client_id">Enter Client ID</string>
    <string name="authorize">Authorize access</string>
    <string name="passwordsDontMatch">Passwords don`t match, please reenter password</string>
    <string name="songs1">Songs</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="playlist1">Playlist</string>
    <string name="song_name">Song name</string>
    <string name="add">Add</string>
    <string name="list_of_songs">List of songs</string>
    <!--    <string name="song">Song</string>-->

</resources>