<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    tools:context=".activities.SonglistActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenish"
            android:elevation="4dp"
            android:gravity="start"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/song_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_songs"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/song_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints="@string/song_name"
            android:ems="10"
            android:hint="@string/song_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_list_text"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/add_song_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@id/song_input"
            app:layout_constraintStart_toEndOf="@id/song_input"
            app:layout_constraintTop_toTopOf="@id/song_input" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="351dp"
            android:layout_height="536dp"
            android:id="@+id/swipeSongs"
            app:layout_constraintTop_toBottomOf="@+id/song_input"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_of_songs"
                style="@style/ShapeAppearance.MaterialComponents.LargeComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/song_input"
                app:layout_constraintStart_toStartOf="@id/song_input"
                app:layout_constraintTop_toBottomOf="@id/song_input"
                app:layout_constraintVertical_bias="0.05"
                tools:listitem="@layout/card_post" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>